k8s/nats/base/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - port: 4222
      targetPort: 4222
