k8s/nats/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nats-ingressroute
  namespace: nats
spec:
  entryPoints:
    - nats
  routes:
    - match: HostSNI(`*`)
      services:
        - name: nats-service
          port: 4222
